--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "./bin/uscis"
   },
   "dependencies": {
+    "ejs": "^2.7.1",
     "iconv-lite": "^0.5.0",
     "jsdom": "^11.10.0",
     "lodash": "^4.17.10",
